タイトルとfaviconを追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>将棋用語和英辞典</title>
+    <link rel="icon" href="favicon.ico">
     <script>
     /* 実験 */
 let csv_url = "https://raw.githubusercontent.com/kagami-nuit/Shogi-terms-Japanese-English-dictionary/main/dictionary.csv";
