CSV整形処理のバグ修正

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     request.onload = function() {
         console.log(request.status);
         console.log(request.responseText);
-        csv_lib = request.responseText.split('\r\n').map(r => r.split(','));
+        csv_lib = request.responseText.split('\n').map(r => r.split(','));
     };
     request.open('GET', csv_file_name);
     request.send();
