CSSとJSを別ファイルに分けた テーブルを色分けした

--- a/index.html
+++ b/index.html
@@ -6,65 +6,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>将棋用語和英辞典</title>
     <link rel="icon" href="favicon.ico">
-    <script>
-    csv_lib = [];
-    let csv_file_name = "dictionary.csv";
-    let request = new XMLHttpRequest();
-    request = new XMLHttpRequest();
-    request.onload = function() {
-        console.log(request.status);
-        console.log(request.responseText);
-        csv_lib = request.responseText.split('\n').map(r => r.split('\t'));
-    };
-    request.open('GET', csv_file_name);
-    request.send();
-
-    function get_lib() {
-        return csv_lib;
-    }
-
-    function update_table() {
-        var rows = get_lib();
-        var kw = document.getElementById('search_word').value;
-        rows = rows.filter(row => row[0].includes(kw) || row[1].includes(kw));
-
-        var element_rows = []
-        rows.forEach(function (row) {
-            var tr = document.createElement('tr');
-            var td1 = document.createElement('td')
-            var td2 = document.createElement('td')
-            var td3 = document.createElement('td')
-            td1.appendChild(document.createTextNode(row[0]))
-            td2.appendChild(document.createTextNode(row[1]))
-            td3.appendChild(document.createTextNode(row[2]))
-            tr.appendChild(td1);
-            tr.appendChild(td2);
-            tr.appendChild(td3);
-            element_rows.push(tr);
-        });
-
-        var tbody = document.getElementById('words_tbody');
-        while(tbody.firstChild){
-            tbody.removeChild(tbody.firstChild);
-        }
-
-        element_rows.forEach(function (elem){
-            tbody.appendChild(elem);
-        });
-
-    }
-
-    document.addEventListener('DOMContentLoaded', function() {
-        document.getElementById('search_word').addEventListener('keyup', update_table);
-    });
-
-    </script>
+    <script type="text/javascript" src="main.js"></script>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div style="margin:20px">
+    <div id="search_part">
         検索:<input id="search_word" type="text" />
     </div>
-    <div style="margin:20px">
+    <div id="view_part">
         <table>
             <thead>
                 <tr>
