--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div id="search_description">
+        <p>将棋用語の和英辞典です。漢字、ひらがなの部分一致でヒットします。</p>
+        <p>This is a Japanese-English dictionary of Shogi terms. You can get hits by partial matches of Kanji or Hiragana.</p>
+    </div>
     <div id="search_part">
         検索:<input id="search_word" type="text" />
     </div>
