ローマ字読みのデータ追加 ローマ字でもヒットするように変更

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div id="search_description">
-        <p>将棋用語の和英辞典です。漢字、ひらがなの部分一致でヒットします。</p>
-        <p>This is a Japanese-English dictionary of Shogi terms. You can get hits by partial matches of Kanji or Hiragana.</p>
+        <p>将棋用語の和英辞典です。漢字、ひらがな、ローマ字の部分一致でヒットします。</p>
+        <p>This is a Japanese-English dictionary of Shogi terms. You can get hits by partial matches of Kanji, Hiragana or Romaji.</p>
     </div>
     <div id="search_part">
         検索:<input id="search_word" type="text" />
