メタ情報追加

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>将棋用語和英辞典</title>
     <link rel="icon" href="favicon.ico">
-    <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="main.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta property="og:url" content=" https://kagami-nuit.github.io/Shogi-terms-Japanese-English-dictionary/" />
+    <meta property="og:type" content=" website" />
+    <meta property="og:title" content=" 将棋用語和英辞典" />
+    <meta property="og:description" content="将棋用語の和英辞典です。Japanese-English dictionary of Shogi terms." />
+    <meta property="og:site_name" content="将棋用語和英辞典" />
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
     <div id="search_description">
