局面図のリンクを追加

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <th>日本語</th>
                     <th>読み</th>
                     <th>英訳</th>
+                    <th>局面図</th>
                 </tr>
             </thead>
             <tbody id="words_tbody">
